--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
         <package android:name="com.android"/>
     </queries>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".FromUsToEUApplication"
         android:allowBackup="true"
