Clean Refactor Step One. Cleaned up converter view model, Better named classes, Deleted all wrappers/handlers, UI constants implemented as enum classes, Use case for domain class logic(getting conversion results), Deleted Interactor class, Fixed inheritance in repository classes. Updated Gradle. A lot of code refactoring.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FromUSToEU"
         android:fullBackupContent="@xml/backup_description">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.ConverterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
